src/test/deca/context/invalid/class/instance/itself.deca
// Description:
//    Utilisation de instanceof
//
// Resultats:
//    undefined type a

class A {
}

{
	A a;
	if(a instanceof a) {}
}

